Updated About Me and Sports sections

--- a/src/App.css
+++ b/src/App.css
@@ -100,13 +100,13 @@ html {
 /* SECTIONS */
 section {
   padding: 5rem 2rem;
-  text-align: justify;
+  text-align: center;
   text-justify:inter-word;
 }
 
 section h2 {
   border-bottom: 2px solid #b0b0b0;
-  display: inline-block;
+  display: block;
   margin-bottom: 1.5rem;
   padding-bottom: 6px;
   color: #ffffff;
