Updated About Me and Sports sections

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ section {
 
 section h2 {
   border-bottom: 2px solid #b0b0b0;
-  display: block;
+  display: inline-block;
   margin-bottom: 1.5rem;
   padding-bottom: 6px;
   color: #ffffff;
