--- a/src/App.css
+++ b/src/App.css
@@ -105,12 +105,12 @@ section {
 }
 
 section h2 {
-  border-bottom: 0.5px solid #b0b0b0;
+  border-bottom: 5px solid #b0b0b0;
   display: inline-block;
   margin-bottom: 1.5rem;
   padding-bottom: 6px;
   color: #ffffff;
- 
+   width: auto;  
 }
 
 /* ABOUT ME */
